test/expected/declare_sb.out
declare x as signed bool
        ^
9: error: "signed _Bool" is illegal for built-in type
